my first homework 10 06 2022

--- a/lesson1/lesson1.html
+++ b/lesson1/lesson1.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>$Title$</title>
+
+    <style>
+    img{
+        width:200px;
+    }
+
+
+    </style>
 </head>
 <body>
-$END$
+<h1>olichka avtobio</h1>
+<p>olichka was born 18 06 2000 in UA</p>
+<img src="../images/photo_2022-05-24_17-39-23.jpg" alt="photo">
+<h2> olichka love</h2>
+<p>olichka loves slavichka soy much, although he sometimes not cute.Reasons why Olichka love Slavichka </p>
+
+<ol>
+    <li>he has cute ass</li>
+    <li>he helps me when im in trouble</li>
+    <li>he is fucking handsome </li>
+    <li>he doesn`t hit me</li>
+</ol>
 </body>
 </html>
