--- a/lesson1/lesson1.html
+++ b/lesson1/lesson1.html
@@ -16,6 +16,7 @@
 <h1>olichka avtobio</h1>
 <p>olichka was born 18 06 2000 in UA</p>
 <img src="../images/photo_2022-05-24_17-39-23.jpg" alt="photo">
+<img src="../images/photo_2022-06-02_22-16-16.jpg" alt="photo2">
 <h2> olichka love</h2>
 <p>olichka loves slavichka soy much, although he sometimes not cute.Reasons why Olichka love Slavichka </p>
 
