second work repeat

--- a/lesson2/repeat.html
+++ b/lesson2/repeat.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<div class="target">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At earum enim ipsa odio quas quia, sit veniam? Cumque, debitis delectus dolor eos laudantium maiores nesciunt possimus quasi tenetur? Cum, quod?</div>
+<div class="target">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At earum enim ipsa odio quas quia, sit
+    veniam? Cumque, debitis delectus dolor eos laudantium maiores nesciunt possimus quasi tenetur? Cum, quod?
+</div>
 
 
 </body>
