--- a/lesson3/homework/cards.html
+++ b/lesson3/homework/cards.html
@@ -28,8 +28,14 @@
         <h4 class="lm2">Learn more</h4>
 
     </div>
-    <div class="third"></div>
-</div>
-
+    <div class="third">
+        <div class="kolo3">
+            <i class="fa-solid fa-headphones"></i>
+        </div>
+        <h1 class="cp3">Laptop</h1>
+        <p class="pf3">A computer is a digital electronic machine that can be programmed to carry out sequences of
+            arithmetic or logical operations (computation) automatically.</p>
+        <h4 class="lm3">Learn more</h4>
+    </div>
 </body>
 </html>
