--- a/lesson4/project/project.html
+++ b/lesson4/project/project.html
@@ -58,58 +58,52 @@
 <div class="che">
     <h5 class="main4">Slavichok loves Olichka</h5>
 </div>
-<div class="5">
-    <div class="1">
-        <div class=""></div>
-        <div class=""></div>
+<div class="fifth">
+    <div class="f1">
+        <div class="h100 w200 bg_bl"></div>
+        <div class="h170 w15 bg_darkbl"></div>
     </div>
-    <div class="2">
-        <div class=""></div>
-        <div class=""></div>
+    <div class="f2">
+        <div class="h100 w200 bg_bl"></div>
+        <div class="h170 w15 bg_darkbl"></div>
     </div>
 </div>
-<div class="6">
+<div class="sith">
     <h5 class="main4">We love each other</h5>
 </div>
-<div class="7">
+<div class="seven">
     <div class="kola">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-    <div class="prgrf">
-        <p></p>
-        <p></p>
-        <p></p>
+        <div class="colona">
+            <div class="bg_bl h180 w50"></div>
+            <div class="slovo">Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="colona">
+            <div class="bg_bl h180 w50"></div>
+            <div class="slovo">Lorem ipsum dolor sit amet.</div>
+        </div>
+        <div class="colona">
+            <div class="bg_bl h180 w50"></div>
+            <div class="slovo">Lorem ipsum dolor sit amet.</div>
+        </div>
     </div>
 </div>
-<div class="8">
-    <div class="left2">
-        <div class="kubk"></div>
-        <div class="kubk"></div>
-        <div class="kubk"></div>
-        <div class="kubk"></div>
-        <h5 class="">olichka Slavichok Flover</h5>
-        <h5 class="">olichka Slavichok Flover</h5>
-        <h5 class="">olichka Slavichok Flover</h5>
-        <h5 class="">olichka Slavichok Flover</h5>
+<div class="eight">
+        <div class="colona">
+            <div class="l_kubs">
+                <div class="hh ww bgg"></div>
+                <div class="hh ww bgg"></div>
+                <div class="hh ww bgg"></div>
+                <div class="hh ww bgg"></div>
+            </div>
+            <h5 class="love">Olichka and Slavichok Forever</h5></div>
+        <div class="roow">
+            <h5 class="loove">Love</h5>
+            <h5 class="loove">Love</h5>
+            <h5 class="loove">Love</h5>
+        </div>
     </div>
-    <div class="right2">
-        <div class="1kolona">
-            <h5>mama</h5>
-            <h5>tato</h5>
-            <h5>sestra</h5>
-        </div>
-        <div class="2kolona">
-            <h5>mama</h5>
-            <h5>tato</h5>
-            <h5>sestra</h5>
-        </div>
-        <div class="3kolona">
-            <h5>mama</h5>
-            <h5>tato</h5>
-            <h5>sestra</h5>
-        </div>
-</div>
+
+
+
 </body>
 </html>
