--- a/verstka/index.html
+++ b/verstka/index.html
@@ -107,5 +107,48 @@
         </div>
     </div>
 </div>
+<div class="fifth_block">
+    <div class="head_text">
+        <h1 class="head_text">Join 200+ amazing companies</h1>
+    </div>
+    <div class="labels">
+        <div class="top">
+            <img src="img/Frame.svg" alt="frame">
+            <img src="img/top22.svg" alt="top2">
+            <img src="img/top3.svg" alt="top3">
+        </div>
+        <div class="central">
+            <img src="img/cen1.svg" alt="cen1">
+            <img src="img/cen2.svg" alt="cen2">
+            <img src="img/cen3.svg" alt="cen3">
+        </div>
+        <div class="bottom">
+            <img src="img/bot1.svg" alt="bot1">
+            <img src="img/bot2.svg" alt="bot2">
+            <img src="img/bot3.svg" alt="bot3">
+        </div>
+    </div>
+</div>
+<div class="six_block">
+    <div class="text_side">
+        <h1 class="title_six">The AC Hub</h1>
+        <p class="text_six">Explore our dedicated online resources. We've got the tips, tricks and online accounting know-how for business success.
+        </p>
+        <button class="button_six">View Hub</button>
+    </div>
+    <div class="image_side">
+        <img src="img/six.svg" alt="six">
+    </div>
+</div>
+<div class="seven_block">
+    <div class="blue_block">
+        <div class="text_area">
+            <h1 class="seven_title">Ready to Switch? It's simple.</h1>
+            <p class="seven_text">Speak to an expert today</p>
+        </div>
+        <button class="button_seven">Get Started</button>
+    </div>
+</div>
+
 </body>
 </html>
