--- a/verstka/index.html
+++ b/verstka/index.html
@@ -149,6 +149,61 @@
         <button class="button_seven">Get Started</button>
     </div>
 </div>
-
+<div class="final_block_header">
+    <div class="final_block">
+        <div class="final_title">
+            <img src="img/logofina;.svg" alt="logo_final">
+            <h1 class="final_text">Your new finance team</h1>
+        </div>
+        <div class="context">
+            <div class="column">
+                <h1 class="title_fin">How it works</h1>
+                <p class="p_final">Hassle Free Switching</p>
+            </div>
+            <div class="column">
+                <h1 class="title_fin">What we do</h1>
+                <p class="p_final">Finance Teams</p>
+                <p class="p_final">Tax</p>
+                <p class="p_final">R&D Tax Credits</p>
+                <p class="p_final">A platform for success</p>
+                <p class="p_final">Software Integrations</p>
+            </div>
+            <div class="column">
+                <h1 class="title_fin">Software Integrations</h1>
+                <p class="p_final">Startups</p>
+                <p class="p_final">Small Business</p>
+                <p class="p_final">Medium Business</p>
+                <p class="p_final">CFO & Head of Finance</p>
+            </div>
+            <div class="column">
+                <h1 class="title_fin">Resources</h1>
+                <p class="p_final">Case Studies</p>
+                <p class="p_final">Blogs</p>
+                <p class="p_final">Guides</p>
+                <p class="p_final">Podcasts</p>
+            </div>
+            <div class="column">
+                <h1 class="title_fin">Company</h1>
+                <p class="p_final">About Us</p>
+                <p class="p_final">Careers</p>
+                <p class="p_final">Contact Us</p>
+            </div>
+        </div>
+        <div class="column mt81">
+            <h1 class="title_fin">Speak to us</h1>
+            <p class="contact_text">Call 020 4530 8432</p>
+            <p class="contact_text">Refer a friend for £175</p>
+            <p class="contact_text">Refer a friend for £175</p>
+        </div>
+        <div class="additional">
+            <div class="text_zone">
+                <h5 class="add_text">© Accountancy Cloud 2021</h5>
+                <h5 class="add_text">Privacy Policy & Cookies</h5>
+                <h5 class="add_text">Terms of Service</h5>
+            </div>
+            <img src="img/acca.svg" alt="acca">
+        </div>
+    </div>
+</div>
 </body>
 </html>
