--- a/project_verstka/project_verstka.html
+++ b/project_verstka/project_verstka.html
@@ -39,11 +39,64 @@
             <button class="sbutton">Talk to Sales</button>
         </div>
     </div>
-    <div class="img_first">
-        <img src="img/yellow.svg" alt="yellow">
-        <img src="img/girl.svg" alt="girl">
+    <div class="yellow_block">
+        <div class="girl"><img src="img/girl.svg" alt="girl"></div>
+        </div>
+
+</div>
+<div class="second_block">
+    <div class="third_title">
+        <h1 class="third_titlee">Trusted by the world's most innovative companies</h1>
+    </div>
+    <div class="third_logo">
+        <div class="logo_one mg_bot">
+            <img src="img/square.svg" alt="logos">
+            <img src="img/code.svg" alt="logos">
+            <img src="img/drop.svg" alt="logos">
+            <img src="img/loom.svg" alt="logos">
+            <img src="img/adobe.svg" alt="logos">
+        </div>
+        <div class="logo_one mg_bot">
+            <img src="img/shift.svg" alt="logos">
+            <img src="img/ease.svg" alt="logos">
+            <img src="img/iron.svg" alt="logos">
+            <img src="img/open.svg" alt="logos">
+            <img src="img/surf.svg" alt="logos">
+        </div>
+        <div class="logo_one marginn_bott">
+            <img src="img/app.svg" alt="logos">
+            <img src="img/beyo.svg" alt="logos">
+            <img src="img/pro.svg" alt="logos">
+            <img src="img/imvo.svg" alt="logos">
+            <img src="img/chip.svg" alt="logos">
+        </div>
     </div>
 </div>
-
+<div class="green_block">
+    <div class="img_green">
+        <img src="img/bike.svg" alt="bike">
+    </div>
+    <div class="green_text">
+        <h1 class="green_title">Modern product teams move fast, but learning from customers takes a ton of time, effort, and energy.</h1>
+        <p class="green_text">So teams often rush user research or skip it altogether, causing products and features to miss the mark.</p>
+    </div>
+</div>
+<div class="four_block">
+    <h1 class="four_title">Sprig makes it possible to obtain qualitative insights at the speed and scale of analytics</h1>
+    <img src="img/four.svg" alt="img_four">
+   <button class="button_four">Start for Free</button>
+</div>
+<div class="purple_block_head">
+    <div class="purple_block">
+        <div class="purple_img">
+            <img src="img/purpl.svg" alt="purple_img">
+        </div>
+        <div class="purpl_text">
+            <h1 class="purpl_title">Target your actual users during key moments throughout their product journey.</h1>
+            <p class="purpl_text">Get 30% higher response rates by asking your customers hyper-relevant questions based
+                on who they are and what they'll do within your product.</p>
+        </div>
+    </div>
+</div>
 </body>
 </html>
