--- a/project_verstka/project_verstka.html
+++ b/project_verstka/project_verstka.html
@@ -41,6 +41,8 @@
     </div>
     <div class="yellow_block">
         <div class="girl"><img src="img/girl.svg" alt="girl"></div>
+        <div class="yelloww">
+            <img src="img/yelloww.svg" alt="yelloww"></div>
         </div>
 
 </div>
@@ -86,16 +88,65 @@
     <img src="img/four.svg" alt="img_four">
    <button class="button_four">Start for Free</button>
 </div>
-<div class="purple_block_head">
-    <div class="purple_block">
+<div class="purple_block">
         <div class="purple_img">
             <img src="img/purpl.svg" alt="purple_img">
         </div>
         <div class="purpl_text">
             <h1 class="purpl_title">Target your actual users during key moments throughout their product journey.</h1>
-            <p class="purpl_text">Get 30% higher response rates by asking your customers hyper-relevant questions based
+            <p class="purpl_textt">Get 30% higher response rates by asking your customers hyper-relevant questions based
                 on who they are and what they'll do within your product.</p>
         </div>
+    </div>
+<div class="solutions">
+    <h5 class="solution_title">SOLUTIONS</h5>
+    <h1 class="main_title">How Sprig helps ensure every product decision is customer-informed</h1>
+    <p class="sol_text">And helps through every stage of your product.</p>
+</div>
+<div class="context_block">
+    <div class="flex">
+        <div class="text_side">
+            <div class="img_top">
+                <img src="img/fiolet.svg" alt="fiolet">
+            </div>
+            <h1 class="title_context">Contextual Microsurveys</h1>
+            <p class="text_context1">Keep a constant pulse on your customer’s experience. Continuously surface user
+                insights via in-product, email, or link microsurveys to improve your product and acquisition
+                funnels.</p>
+            <button class="button_context">Learn More</button>
+        </div>
+        <img src="img/fff.svg" alt="micro_img">
+    </div>
+    <div class="flex">
+        <div class="text_side">
+            <div class="img_top">
+                <img src="img/green.svg" alt="fiolet">
+            </div>
+            <h1 class="title_context">Video Questions</h1>
+            <p class="text_context">Have more customer conversations, in less time. Conduct one-to-one user interviews
+                anytime, anywhere in order to validate ideas and build a roadmap your customers will love.</p>
+            <button class="button_context">Learn More</button>
+        </div>
+        <img src="img/qa.svg" alt="qa_img">
+    </div>
+    <div class="flex">
+        <div class="text_side">
+            <div class="img_top">
+                <img src="img/orang.svg" alt="fiolet">
+            </div>
+            <h1 class="title_context">Concept Testing</h1>
+            <p class="text_context">Quickly iterate designs based on feedback from your users. Conduct rapid and remote
+                concept testing to ensure your new concept, design, and messaging hit the mark by collecting feedback
+                from your customers before launch.</p>
+            <button class="button_context">Learn More</button>
+        </div>
+        <img src="img/therd.svg" alt="qa_img">
+    </div>
+
+    <div class="bottom_buttons">
+        <button class="buttons w228">Contextual Microsurveys</button>
+        <button class="buttons w147">Video Questions</button>
+        <button class="buttons bg_yellow w152">Concept Testing</button>
     </div>
 </div>
 </body>
