--- a/project_verstka/project_verstka.html
+++ b/project_verstka/project_verstka.html
@@ -148,6 +148,7 @@
         <button class="buttons w147">Video Questions</button>
         <button class="buttons bg_yellow w152">Concept Testing</button>
     </div>
+    <div></div>
 </div>
 </body>
 </html>
