--- a/project_verstka/project_verstka.html
+++ b/project_verstka/project_verstka.html
@@ -86,7 +86,7 @@
 <div class="four_block">
     <h1 class="four_title">Sprig makes it possible to obtain qualitative insights at the speed and scale of analytics</h1>
     <img src="img/four.svg" alt="img_four">
-   <button class="button_four">Start for Free</button>
+   <button class="button_four pre_button">Start for Free</button>
 </div>
 <div class="purple_block">
         <div class="purple_img">
@@ -142,13 +142,65 @@
         </div>
         <img src="img/therd.svg" alt="qa_img">
     </div>
-
     <div class="bottom_buttons">
         <button class="buttons w228">Contextual Microsurveys</button>
         <button class="buttons w147">Video Questions</button>
         <button class="buttons bg_yellow w152">Concept Testing</button>
     </div>
-    <div></div>
+</div>
+<div class="pink_block">
+    <div class="inside_pink">
+        <h5 class="on_top">Features</h5>
+        <h1 class="main_pink_title">How Sprig delivers accurate, in-depth user insights in real-time</h1>
+        <div class="context_side">
+            <div class="board">
+                <img src="img/board.svg" alt="board">
+            </div>
+            <div class="main_text_pink">
+                <div class="contextual">
+                    <div class="flex_2"><h1 class="title_contextual">Contextual Targeting</h1>
+                        <img src="img/one_sign.svg" alt="up_sign"></div>
+                    <h5 class="other_pink_context">Target users based on what they do in your product</h5>
+                    <p class="other_pink_context">Conduct interviews, concept tests, and surveys with specific users based
+                        on certain characteristics and actions. Giving you faster, more relevant results every time.
+                    </p>
+                    <div class="learn analysis">
+                        <h5 class="other_pink_context mb22">Learn More</h5>
+                        <img src="img/ukazatel.svg" alt="ukazatel">
+                    </div>
+                </div>
+                <div class="analysis flex_2 ">
+                    <h5 class="title_dop_context">AI Analysise</h5>
+                    <img src="img/two_sign.svg" alt="sign">
+                </div>
+                <div class="analysis flex_2">
+                    <h5 class="title_dop_context">Templates</h5>
+                    <img src="img/two_sign.svg" alt="sign">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="five_block">
+    <div class="content_five">
+        <h5 class="on_top">INTEGRATIONS</h5>
+        <h1 class="five_title">Share data and insights across all of your (other) favorite tools by integrating with
+            Sprig</h1>
+        <p class="other_pink_context w667">Connect events and attributes from other platforms to ensure you’re asking the
+            right customers the right questions. Then share your findings with apps like Slack and Zendesk to get a
+            comprehensive view of your users' behaviors.</p>
+        <button class="button_four w208 ">See All Integrations</button>
+    </div>
+    <div class="img_five"><img src="" alt="five"></div>
+</div>
+<div class="six_block">
+    <div class="pink_block_left">
+        <h5 class="on_top">CASE STUDY</h5>
+        <h1 class="title_dop_context">Trusted by the world's most customer-centric teams</h1>
+        <p class="purpl_textt">Sprig helps product and research teams ensure user insights fuel every product decision.</p>
+        <button class="button_context">Learn More</button>
+    </div>
+    <div class="yellow_block_right"></div>
 </div>
 </body>
 </html>
