--- a/project_verstka/project_verstka.html
+++ b/project_verstka/project_verstka.html
@@ -6,10 +6,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100;0,200;1,100;1,200;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <div class="header_class">
@@ -151,30 +151,31 @@
 <div class="pink_block">
     <div class="inside_pink">
         <h5 class="on_top">Features</h5>
-        <h1 class="main_pink_title">How Sprig delivers accurate, in-depth user insights in real-time</h1>
+        <h1 class="main_pink_title_block">How Sprig delivers accurate, in-depth user insights in real-time</h1>
         <div class="context_side">
             <div class="board">
                 <img src="img/board.svg" alt="board">
             </div>
             <div class="main_text_pink">
                 <div class="contextual">
-                    <div class="flex_2"><h1 class="title_contextual">Contextual Targeting</h1>
+                    <div class="flex_2">
+                        <h1 class="title_contextual">Contextual Targeting</h1>
                         <img src="img/one_sign.svg" alt="up_sign"></div>
                     <h5 class="other_pink_context">Target users based on what they do in your product</h5>
                     <p class="other_pink_context">Conduct interviews, concept tests, and surveys with specific users based
                         on certain characteristics and actions. Giving you faster, more relevant results every time.
                     </p>
-                    <div class="learn analysis">
-                        <h5 class="other_pink_context mb22">Learn More</h5>
+                    <div class="learn_analysis">
+                        <h5 class="button_0B mg_top35">Learn More</h5>
                         <img src="img/ukazatel.svg" alt="ukazatel">
                     </div>
                 </div>
                 <div class="analysis flex_2 ">
-                    <h5 class="title_dop_context">AI Analysise</h5>
+                    <h5 class="title_contextual">AI Analysis</h5>
                     <img src="img/two_sign.svg" alt="sign">
                 </div>
                 <div class="analysis flex_2">
-                    <h5 class="title_dop_context">Templates</h5>
+                    <h5 class="title_contextual">Templates</h5>
                     <img src="img/two_sign.svg" alt="sign">
                 </div>
             </div>
