--- a/project_verstka/project_verstka.html
+++ b/project_verstka/project_verstka.html
@@ -192,16 +192,33 @@
             comprehensive view of your users' behaviors.</p>
         <button class="button_four w208 ">See All Integrations</button>
     </div>
-    <div class="img_five"><img src="" alt="five"></div>
+    <div class="img_content">
+        <img src="img/fif.svg" alt="fif"></div>
 </div>
 <div class="six_block">
-    <div class="pink_block_left">
-        <h5 class="on_top">CASE STUDY</h5>
-        <h1 class="title_dop_context">Trusted by the world's most customer-centric teams</h1>
-        <p class="purpl_textt">Sprig helps product and research teams ensure user insights fuel every product decision.</p>
-        <button class="button_context">Learn More</button>
+        <div class="pink_block_left">
+            <div class="inside_pink">
+                <h5 class="on_top">CASE STUDY</h5>
+                <h1 class="title_dop_context">Trusted by the world's most customer-centric teams</h1>
+                <p class="purpl_textt">Sprig helps product and research teams ensure user insights fuel every product
+                    decision.</p>
+                <button class="button_context">Learn More</button>
+            </div>
+        </div>
+        <div class="yellow_block_right">
+            <div class="inside_pink">
+                <div class="invisible">
+                    <img src="img/six_img.svg" alt="six"></div>
+                <h5>Sprig helps us collect insights easier, faster, and more accurately than any other tool on the
+                    market,
+                    which allows us to build a better product for our users and ultimately grow our revenue.</h5>
+                <div class="info_man">
+                    <img src="img/man.svg" alt="man">
+                    <h1>Daniel Layfield</h1>
+                    <p>Growth Product Manager at Codecademy</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="yellow_block_right"></div>
-</div>
 </body>
 </html>
