--- a/project_verstka/project_verstka.html
+++ b/project_verstka/project_verstka.html
@@ -113,7 +113,7 @@
             <p class="text_context1">Keep a constant pulse on your customer’s experience. Continuously surface user
                 insights via in-product, email, or link microsurveys to improve your product and acquisition
                 funnels.</p>
-            <button class="button_context">Learn More</button>
+            <button class="button_context mg_top64">Learn More</button>
         </div>
         <img src="img/fff.svg" alt="micro_img">
     </div>
@@ -125,7 +125,7 @@
             <h1 class="title_context">Video Questions</h1>
             <p class="text_context">Have more customer conversations, in less time. Conduct one-to-one user interviews
                 anytime, anywhere in order to validate ideas and build a roadmap your customers will love.</p>
-            <button class="button_context">Learn More</button>
+            <button class="button_context mg_top64">Learn More</button>
         </div>
         <img src="img/qa.svg" alt="qa_img">
     </div>
@@ -135,10 +135,10 @@
                 <img src="img/orang.svg" alt="fiolet">
             </div>
             <h1 class="title_context">Concept Testing</h1>
-            <p class="text_context">Quickly iterate designs based on feedback from your users. Conduct rapid and remote
+            <p class="text_context mg_top64">Quickly iterate designs based on feedback from your users. Conduct rapid and remote
                 concept testing to ensure your new concept, design, and messaging hit the mark by collecting feedback
                 from your customers before launch.</p>
-            <button class="button_context">Learn More</button>
+            <button class="button_context mg_top64">Learn More</button>
         </div>
         <img src="img/therd.svg" alt="qa_img">
     </div>
@@ -202,23 +202,90 @@
                 <h1 class="title_dop_context">Trusted by the world's most customer-centric teams</h1>
                 <p class="purpl_textt">Sprig helps product and research teams ensure user insights fuel every product
                     decision.</p>
-                <button class="button_context">Learn More</button>
+                <button class="button_context mg_top36">Learn More</button>
             </div>
         </div>
         <div class="yellow_block_right">
             <div class="inside_pink">
                 <div class="invisible">
                     <img src="img/six_img.svg" alt="six"></div>
-                <h5>Sprig helps us collect insights easier, faster, and more accurately than any other tool on the
+                <h5 class="title_yellow">Sprig helps us collect insights easier, faster, and more accurately than any other tool on the
                     market,
                     which allows us to build a better product for our users and ultimately grow our revenue.</h5>
                 <div class="info_man">
                     <img src="img/man.svg" alt="man">
-                    <h1>Daniel Layfield</h1>
-                    <p>Growth Product Manager at Codecademy</p>
+                    <div class="column mg_left">
+                        <h1 class="info_title">Daniel Layfield</h1>
+                        <p class="info_p">Growth Product Manager at Codecademy</p></div>
                 </div>
             </div>
         </div>
     </div>
+<div class="last_block">
+    <div class="center_text">
+        <h1 class="head_title">Launch a Sprig within minutes.</h1>
+        <h1 class="head_title">See insights within hours.</h1>
+    </div>
+    <div class="flex_center mg">
+        <p class="head_text">Create your free account to conduct video interviews, test designs, and survey specific
+        users within your product, on your website, and more.</p>
+    </div>
+    <div class="flex_center">
+        <button class="button_four w163_54">Start for Free</button>
+    </div>
+    <div class="final">
+        <div class="mg_top80">
+            <div class="img_final">
+                <img src="img/final.svg" alt="img_final">
+            </div>
+            <div class="final_context">
+                <div class="product">
+                    <h5 class="some_title">Product</h5>
+                    <h5>Microsurveys</h5>
+                    <h5>Video Questions</h5>
+                    <h5>Video Questions</h5>
+                    <h5>Contextual Targeting</h5>
+                    <h5>Text Analysis</h5>
+                    <h5>Integrations</h5>
+                    <h5>Plans</h5>
+                </div>
+                <div class="product">
+                    <h5 class="some_title">Customer Stories</h5>
+                    <h5>Square</h5>
+                    <h5>Codecademy</h5>
+                    <h5>Nova Credit</h5>
+                    <h5>Chipper</h5>
+                    <h5>Plann</h5>
+                    <h5>ProGuides</h5>
+                    <h5>Shift</h5>
+                </div>
+                <div class="product">
+                    <h5 class="some_title">Company</h5>
+                    <h5>About Us</h5>
+                    <h5>Careers</h5>
+                    <h5>Terms of Service</h5>
+                    <h5>Privacy Policy</h5>
+                    <h5>Data Processing Addendum</h5>
+                </div>
+                <div class="product">
+                    <h5 class="some_title">Resources</h5>
+                    <h5>Blog</h5>
+                    <h5>Template Gallery</h5>
+                    <h5>Podcast</h5>
+                    <h5>Documentation</h5>
+                    <h5>Security</h5>
+                </div>
+            </div>
+        </div>
+        <div class="names">
+            <h5>Copyright © 2022 Sprig. All Rights Reserved.</h5>
+            <div class="images">
+                <img src="img/fb.svg" alt="fb">
+                <img src="img/in.svg" alt="in">
+                <img src="img/tw.svg" alt="tw">
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
