--- a/verstka/index.html
+++ b/verstka/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100;0,200;1,100;1,200;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="media.css">
+
 </head>
 <body>
 <header class="header">
@@ -27,6 +29,9 @@
             <button class="nav_btn expert">Talk to an Expert</button>
         </div>
     </nav>
+        <div class="mobile_button">
+            <span></span>
+        </div>
     </div>
 
     <div class="header_wrap_content">
@@ -152,7 +157,7 @@
 <div class="final_block_header">
     <div class="final_block">
         <div class="final_title">
-            <img src="img/logofina;.svg" alt="logo_final">
+            <img src="img/logofina.svg" alt="logo_final">
             <h1 class="final_text">Your new finance team</h1>
         </div>
         <div class="context">
