--- a/project_verstka/project_verstka.html
+++ b/project_verstka/project_verstka.html
@@ -241,47 +241,51 @@
             <div class="final_context">
                 <div class="product">
                     <h5 class="some_title">Product</h5>
-                    <h5>Microsurveys</h5>
-                    <h5>Video Questions</h5>
-                    <h5>Video Questions</h5>
-                    <h5>Contextual Targeting</h5>
-                    <h5>Text Analysis</h5>
-                    <h5>Integrations</h5>
-                    <h5>Plans</h5>
+                    <h5 class="final_h mg_bott">Microsurveys</h5>
+                    <h5 class="final_h mg_bott">Video Questions</h5>
+                    <h5 class="final_h mg_bott">Video Questions</h5>
+                    <h5 class="final_h mg_bott">Contextual Targeting</h5>
+                    <h5 class="final_h mg_bott">Text Analysis</h5>
+                    <h5 class="final_h mg_bott">Integrations</h5>
+                    <h5 class="final_h mg_bott">Plans</h5>
                 </div>
                 <div class="product">
                     <h5 class="some_title">Customer Stories</h5>
-                    <h5>Square</h5>
-                    <h5>Codecademy</h5>
-                    <h5>Nova Credit</h5>
-                    <h5>Chipper</h5>
-                    <h5>Plann</h5>
-                    <h5>ProGuides</h5>
-                    <h5>Shift</h5>
+                    <h5 class="final_h mg_bott">Square</h5>
+                    <h5 class="final_h mg_bott">Codecademy</h5>
+                    <h5 class="final_h mg_bott">Nova Credit</h5>
+                    <h5 class="final_h mg_bott">Chipper</h5>
+                    <h5 class="final_h mg_bott">Plann</h5>
+                    <h5 class="final_h mg_bott">ProGuides</h5>
+                    <h5 class="final_h mg_bott">Shift</h5>
                 </div>
                 <div class="product">
                     <h5 class="some_title">Company</h5>
-                    <h5>About Us</h5>
-                    <h5>Careers</h5>
-                    <h5>Terms of Service</h5>
-                    <h5>Privacy Policy</h5>
-                    <h5>Data Processing Addendum</h5>
+                    <h5 class="final_h mg_bott">About Us</h5>
+                    <h5 class="final_h mg_bott">Careers</h5>
+                    <h5 class="final_h mg_bott">Terms of Service</h5>
+                    <h5 class="final_h mg_bott">Privacy Policy</h5>
+                    <h5 class="final_h mg_bott">Data Processing Addendum</h5>
                 </div>
                 <div class="product">
                     <h5 class="some_title">Resources</h5>
-                    <h5>Blog</h5>
-                    <h5>Template Gallery</h5>
-                    <h5>Podcast</h5>
-                    <h5>Documentation</h5>
-                    <h5>Security</h5>
+                    <h5 class="final_h mg_bott">Blog</h5>
+                    <h5 class="final_h mg_bott">Template Gallery</h5>
+                    <h5 class="final_h mg_bott">Podcast</h5>
+                    <h5 class="final_h mg_bott">Documentation</h5>
+                    <h5 class="final_h mg_bott">Security</h5>
                 </div>
             </div>
         </div>
         <div class="names">
-            <h5>Copyright © 2022 Sprig. All Rights Reserved.</h5>
+            <h5 class="final_h">Copyright © 2022 Sprig. All Rights Reserved.</h5>
             <div class="images">
-                <img src="img/fb.svg" alt="fb">
-                <img src="img/in.svg" alt="in">
+                <div class="img_last">
+                    <img src="img/fb.svg" alt="fb">
+                </div>
+                <div class="img_last">
+                    <img src="img/in.svg" alt="in">
+                </div>
                 <img src="img/tw.svg" alt="tw">
             </div>
         </div>
