--- a/GO_IT_Marafon/index..html
+++ b/GO_IT_Marafon/index..html
@@ -6,9 +6,59 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<div class="wrapper">
+    <div class="under_wrap">
+        <div class="left_info">
+            <div class="photo">
+                <img src="imges/photo.svg" alt="photo">
+            </div>
+            <div class="contacts_info">
+                <h2 class="contacts">Contacts</h2>
+                <div class="inside_div">
+                    <div class="letters">
+                        <p class="letter">C:</p>
+                        <p class="letter">E:</p>
+                    </div>
+                    <div class="numbers">
+                        <p class="number">+7 777 777 77 77</p>
+                        <p class="number">chornyiav@gmail.com</p>
+                    </div>
+                </div>
 
+            </div>
+            <div class="tech_block">
+                <h2 class="name_block">Tech Skills</h2>
+                <ul class="tech_info">
+                    <li><span>HTML5</span></li>
+                    <li><span>CSS3</span></li>
+                    <li><span>GIT</span></li>
+                    <li><span>WebPack</span></li>
+                    <li><span>JavaScript</span></li>
+                    <li><span>React.js</span></li>
+                    <li><span>Node.js</span></li>
+                </ul>
+            </div>
+            <div class="soft_block">
+                <h2 class="name_block">Soft Skills</h2>
+                <ul class="tech_info">
+                    <li><span>Scrum</span></li>
+                    <li><span>Agile</span></li>
+                    <li><span>GTD</span></li>
+                    <li><span>Teamwork</span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="main_info"></div>
+
+    </div>
+</div>
 </body>
 </html>
