--- a/GO_IT_Marafon/index..html
+++ b/GO_IT_Marafon/index..html
@@ -56,7 +56,13 @@
             </div>
         </div>
 
-        <div class="main_info"></div>
+        <div class="main_info">
+            <div class="head_info">
+                <h4 class="head_title">Front-End Developer</h4>
+                <h1 class="main_head_title">Anton Chornyi</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+            </div>
+        </div>
 
     </div>
 </div>
